# FATST

./: .gitignore  AGENTS.md  README.md  pyproject.toml
Papers/: INDEX.md  README.md  ame-ts-anchored-moe.md  dtaf-temporal-stabilization-frequency-differencing.md  elastst-varied-horizon.md  mohets-heterogeneous-experts.md  protots-hierarchical-prototypes.md  qdf-quadratic-direct-forecast.md  seg-moe-segment-wise-routing.md  srp-step-specific-representation.md  tfps-pattern-specific-experts.md  timealign-bridging-past-and-future.md  timeemb-static-dynamic-disentanglement.md  timeperceiver-generalized-forecasting.md  transdf-transformed-label-alignment.md
analysis/: README.md  phase0_controls_metrics_20260620.csv  phase0_controls_results_20260620.md  phase0_followup_rerun_and_paper_gap_20260620.md  phase0_gate_metrics_20260620.csv  phase0_gate_results_20260620.md  phase0_patch_seed_variance_metrics_20260621.csv  phase0_patch_seed_variance_report_20260621.md  phase0_patch_seed_variance_summary_20260621.csv  phase0_prefix_consistency_raw_20260621.csv  phase0_prefix_consistency_report_20260621.md  research_progress_20260623.md
baselines/: README.md
configs/: README.md  phase0_protocol.json  phase1_protocol.json  phase2_protocol.json
docs/: paper-mainline.md  project-principles.md  research-governance.md  research-roadmap.md
scripts/: README.md  analyze_output_error_process_problem.py  analyze_phase0_prefix_consistency.py  analyze_phase0_segment_oracle.py  analyze_phase1_fixed_adapter_gate.py  analyze_phase1_future_aware_adapter_gate.py  (+86 more)
(+2298 files in other folders)
