[project]
name = "r-2026-fatst"
version = "0.1.0"
description = "Clean research codebase for future-aware time series forecasting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
